--- a/diabetes-manager/src/App.css
+++ b/diabetes-manager/src/App.css
@@ -5,3 +5,14 @@
 .nav {
   color: #fcfcfc;
 }
+
+.center {
+  font-size: 5rem;
+  margin: 0;
+  background: yellow;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
