--- a/diabetes-manager/src/App.css
+++ b/diabetes-manager/src/App.css
@@ -7,12 +7,27 @@
 }
 
 .center {
-  font-size: 5rem;
   margin: 0;
-  background: yellow;
   position: absolute;
   top: 50%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+
+.box {
+  height: 160px;
+  border: 1px solid #2592f2;
+}
+
+@media screen and (min-width: 599px) {
+  .desktop {
+    margin-top: 86px;
+    display: flex;
+    width: 75%;
+  }
+
+  .box {
+    width: 300px;
+  }
 }
