--- a/diabetes-manager/src/App.css
+++ b/diabetes-manager/src/App.css
@@ -18,16 +18,27 @@
 .box {
   height: 160px;
   border: 1px solid #2592f2;
+  margin-bottom: 15px;
 }
 
 @media screen and (min-width: 599px) {
+  .header {
+    padding-top: 56px;
+  }
   .desktop {
-    margin-top: 86px;
+    margin: 50px;
     display: flex;
+    height: 50%;
     width: 75%;
   }
 
   .box {
+    height: 350px;
     width: 300px;
+    margin-bottom: 15px;
   }
+}
+
+.side-panel {
+  padding-bottom: 100px;
 }
