--- a/diabetes-manager/src/App.css
+++ b/diabetes-manager/src/App.css
@@ -42,6 +42,107 @@
   margin-bottom: 15px;
 }
 
+.side-panel {
+  padding-bottom: 100px;
+}
+
+html,
+body {
+  color: #020207;
+  width: 100%;
+  height: 100%;
+}
+
+.MuiBottomNavigationAction-selected-4 {
+  color: white;
+  font-weight: 600;
+}
+
+.box {
+  border: none;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.flex {
+  flex-wrap: wrap;
+  height: auto;
+  padding-bottom: 100px;
+}
+
+.profile,
+.inputs {
+  box-sizing: border-box;
+}
+
+.profile {
+  padding: 30px;
+  margin-top: 0;
+  border: none;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  width: 100%;
+  height: auto;
+  min-height: 500px;
+  position: relative;
+}
+
+.inputs {
+  width: 100%;
+  padding: 30px;
+  border: none;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  height: auto;
+  min-height: 500px;
+  position: relative;
+}
+
+.inputs input {
+  color: #020207;
+}
+
+.profile p {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  text-align: left;
+  font-size: 1.6rem;
+}
+
+button.MuiButtonBase-root-8.MuiButton-root-48.MuiButton-contained-59.MuiButton-containedPrimary-60.MuiButton-raised-62.MuiButton-raisedPrimary-63.Profile-button-46 {
+  background: #fcfcfc;
+}
+
+span.MuiButton-label-49 a {
+  color: #f50057;
+  text-decoration: none;
+  letter-spacing: 0.75px;
+}
+
+button.MuiButtonBase-root-8.MuiButton-root-48.MuiButton-contained-59.MuiButton-containedPrimary-60.MuiButton-raised-62.MuiButton-raisedPrimary-63.Profile-button-46:hover,
+button.MuiButtonBase-root-8.MuiButton-root-48.MuiButton-contained-59.MuiButton-containedPrimary-60.MuiButton-raised-62.MuiButton-raisedPrimary-63.Profile-button-46:hover
+  a {
+  background: #f50057;
+  color: #fcfcfc;
+}
+
+.profile-btns {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.inputs button {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 100px;
+  height: 30px;
+  border-radius: 3px;
+  border: none;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+}
+
 @media screen and (min-width: 599px) {
   .header {
     padding-top: 56px;
@@ -100,8 +201,98 @@
     align-items: flex-end;
     justify-content: flex-end;
   }
-}
+  html,
+  body {
+    color: #020207;
+    width: 100%;
+    height: 100%;
+  }
 
-.side-panel {
-  padding-bottom: 100px;
+  .box {
+    border: none;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+
+  .flex {
+    flex-wrap: wrap;
+    height: auto;
+  }
+
+  .profile,
+  .inputs {
+    box-sizing: border-box;
+  }
+
+  .profile {
+    padding: 30px;
+    margin-top: 0;
+    border: none;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    width: 45%;
+    height: auto;
+    min-height: 500px;
+    position: relative;
+    margin-bottom: 25px;
+  }
+
+  .inputs {
+    width: 45%;
+    padding: 30px;
+    border: none;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    height: auto;
+    min-height: 500px;
+    position: relative;
+  }
+
+  .inputs input {
+    color: #020207;
+  }
+
+  .profile p {
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-align: left;
+  }
+
+  button.MuiButtonBase-root-8.MuiButton-root-48.MuiButton-contained-59.MuiButton-containedPrimary-60.MuiButton-raised-62.MuiButton-raisedPrimary-63.Profile-button-46 {
+    background: #fcfcfc;
+  }
+
+  span.MuiButton-label-49 a {
+    color: #f50057;
+    text-decoration: none;
+    letter-spacing: 0.75px;
+  }
+
+  button.MuiButtonBase-root-8.MuiButton-root-48.MuiButton-contained-59.MuiButton-containedPrimary-60.MuiButton-raised-62.MuiButton-raisedPrimary-63.Profile-button-46:hover,
+  button.MuiButtonBase-root-8.MuiButton-root-48.MuiButton-contained-59.MuiButton-containedPrimary-60.MuiButton-raised-62.MuiButton-raisedPrimary-63.Profile-button-46:hover
+    a {
+    background: #f50057;
+    color: #fcfcfc;
+  }
+
+  .profile-btns {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+  }
+
+  .inputs button {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    width: 100px;
+    height: 30px;
+    border-radius: 3px;
+    border: none;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+  }
+  .MuiBottomNavigationAction-selected-4 {
+    color: white;
+    font-weight: 600;
+  }
 }
